<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_bg">

    <ProgressBar
        android:id="@+id/create_account_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"/>

        <AutoCompleteTextView
            android:id="@+id/email_create_account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/password_create_account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up_text"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"/>

    </LinearLayout>



</LinearLayout>