<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center">


    <EditText
        android:id="@+id/post_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:hint="@string/post_title" />

    <EditText
        android:id="@+id/post_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:hint="@string/post_description"/>

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/post_save_journal_button_text"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"/>



</LinearLayout>